Bug#34632 - a lock record can now have state == recUnlocked. In this case, Table::checkUniqueRecordVersion should check the prior record.